# gascamp

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  TUTORIAL.md
.claude-plugin/: marketplace.json
crates/camp/: Cargo.toml
crates/camp-core/: Cargo.toml
crates/camp-core/src/: clock.rs  config.rs  error.rs  event.rs  export.rs  id.rs  lib.rs  mail.rs  pack.rs  promptsafe.rs  readiness.rs  search.rs  vocab.rs
crates/camp-core/src/formula/: ast.rs  compose.rs  cook.rs  drain.rs  keys.rs  layers.rs  mod.rs  parse.rs  runtime.rs  validate.rs
crates/camp-core/src/import/: inventory.rs  lock.rs  manifest.rs  materialize.rs  mod.rs  skills.rs  source.rs
crates/camp-core/src/ledger/: fold.rs  mod.rs  refold.rs  schema.rs
crates/camp-core/src/orders/: cron.rs  mod.rs  parse.rs
crates/camp-core/src/patrol/: mod.rs  timers.rs
crates/camp-core/tests/: claim_invariant.rs  compose.rs  cook.rs  export_city.rs  export_golden.rs  formula_corpus.rs  graph_events.rs  perf_volume.rs  refold_prop.proptest-regressions  refold_prop.rs  starter_pack.rs  vocab_pin.rs
crates/camp-core/tests/fixtures/: gc-vocab.json
crates/camp-core/tests/fixtures/export-golden/: beads.jsonl
crates/camp/src/: campdir.rs  gitignore.rs  main.rs
crates/camp/src/cmd/: adopt.rs  attach.rs  backup.rs  claim.rs  close.rs  create.rs  decide.rs  doctor.rs  event_emit.rs  events.rs  export.rs  import.rs  init.rs  interrupt.rs  ls.rs  mail.rs  nudge.rs  order.rs  recall.rs  remember.rs  retry.rs  rig.rs  search.rs  service.rs  session.rs  sessions.rs  show.rs  sling.rs  stop.rs  top.rs  watch.rs
crates/camp/src/cmd/shim/: bd.rs  hook.rs  install.rs  mail.rs  mod.rs  prime.rs  project.rs  runtime.rs
crates/camp/src/daemon/: autostart.rs  bounded.rs  control.rs  cursor.rs  dispatch.rs  event_loop.rs  mod.rs  orders.rs  patrol.rs  read_channel.rs  socket.rs  spawn.rs
crates/camp/src/service/: camp_id.rs  detect.rs  launchd.rs  mod.rs  runner.rs  supervisor.rs  systemd.rs
crates/camp/tests/: claude-or-agent.sh  claude_compat.rs  cli_backup.rs  cli_campd_alias.rs  cli_claim_close.rs  cli_create.rs  cli_daemon_signal.rs  cli_doctor.rs  cli_doctor_formula.rs  cli_event_emit.rs  cli_events.rs  cli_export.rs  cli_init.rs  cli_lifecycle.rs  cli_ls.rs  cli_nudge.rs  cli_order.rs  cli_rig.rs  cli_search.rs  cli_service.rs  cli_session.rs  cli_show.rs  cli_sling.rs  cli_statusline.rs  cli_version.rs  container_smoke.rs  control.rs  daemon_dispatch.rs  daemon_drain.rs  daemon_graph.rs  daemon_lifecycle.rs  daemon_orders.rs  daemon_patrol.rs  daemon_wedge.rs  e2e.rs  e2e_formula_valid.rs  fake-agent.sh  mail_prime_shim.rs  no_bare_camp_init.rs  overseer.rs  (+9 more)
crates/camp/tests/fixtures/: gc-fragment.sh
crates/camp/tests/fixtures/control/: PROVENANCE.md  can_use_tool_request.json  control_response_error.json  control_response_success.json  dialog_refusal_response.json  interrupt_request.json  permission_allow_response.json  permission_deny_response.json  request_user_dialog_request.json  stream_assistant.json  user_turn.json
crates/camp/tests/fixtures/drainfix/: pack.toml
crates/camp/tests/fixtures/formulas/: e2e-guarded.toml
crates/camp/tests/fixtures/toy-project/: README.md  test_toy.py  toy
plugin/: README.md
(+229 files in other folders)
