[workspace]
resolver = "3"
members = ["crates/camp-core", "crates/camp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Liquescent-Development/gascamp"

[workspace.dependencies]
camp-core = { path = "crates/camp-core" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
