[package]
name = "camp-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
jiff = "0.2.31"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
