[package]
name = "camp-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
fastrand = "2.3.0"
jiff = "0.2.31"
rusqlite = { version = "0.40.1", features = ["bundled"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
