[package]
name = "camp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
camp-core = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
mio = { version = "1.2.1", features = ["os-poll", "net"] }
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
