[package]
name = "camp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sha2 = "0.10.9"
anyhow = "1.0.103"
camp-core = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
jiff = "0.2.31"
mio = { version = "1.2.1", features = ["os-poll", "net", "os-ext"] }
notify = "8.2.0"
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
tempfile = "3.27.0"
toml = "1.1.2"
uuid = { version = "1.23.4", features = ["v4", "v5"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
socket2 = "0.5"
tempfile = "3.27.0"
